# gmail-mcp

./: .gitignore  LICENSE  README.md  config.example.json  fetch_app_password.sh  pyproject.toml  run_mcp.sh  server.py
