[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-mcp"
version = "1.0.0"
description = "Gmail IMAP MCP Server for Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gmail-mcp = "server:main"